Fixes for too large css

--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -1,8 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@layer components {
-  .active-link {
-    @apply bg-slate-600;
-  }
+.active-link {
+  @apply bg-slate-600;
 }
+
